RESOLVED FIXED86429
RenderLayer::repaintRectIncludingDescendants shouldn't include repaint rects of composited descendants
https://bugs.webkit.org/show_bug.cgi?id=86429
Summary RenderLayer::repaintRectIncludingDescendants shouldn't include repaint rects ...
Tim Horton
Reported 2012-05-14 19:12:08 PDT
As it stands, we can end up unioning a rect with a page-relative origin and a rect with a 0,0 origin (the compositing layer), creating huge repaint rects with some content. Composited descendants don't need to be factored in here (the only use of repaintRectIncludingDescendants is in scrollContentsFathPath, and composited layers won't need to be invalidated manually there). This is a significant scrolling performance win on some pages. <rdar://problem/11445132>
Attachments
patch (3.48 KB, patch)
2012-05-14 19:56 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2012-05-14 19:56:46 PDT
Tim Horton
Comment 2 2012-05-14 23:11:37 PDT
Note You need to log in before you can comment on or make changes to this bug.