RenderLayer::repaintRectIncludingDescendants shouldn't include repaint rects of composited descendants https://bugs.webkit.org/show_bug.cgi?id=86429 <rdar://problem/11445132>

Reviewed by Simon Fraser.

Change repaintRectIncludingDescendants to not include repaint rects for composited child layers,
and rename the function to make it more clear that that's what it does now.

No new tests, scrolling performance optimization.

* page/FrameView.cpp:
(WebCore::FrameView::scrollContentsFastPath):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::repaintRectIncludingNonCompositingDescendants):
* rendering/RenderLayer.h:
(RenderLayer):


Canonical link: https://commits.webkit.org/104023@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117032 268f45cc-cd09-0410-ab3c-d52691b4dbfc